--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 DB_URL="postgresql+psycopg2://postgres:pass1234@localhost:5432/task_manager_db"
 
-SUPABASE_URL=
+SUPABASE_URL=https://elwcwqwsxqjdgvydswdk.supabase.co
 SUPABASE_KEY=
